--- a/bibs/methods.bib
+++ b/bibs/methods.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2019-12-14 17:54:47 +0100 
+%% Created for Aviad Albert at 2021-10-11 13:22:49 +0300 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -42,13 +42,14 @@
 	Adsurl = {http://adsabs.harvard.edu/abs/2017Entrp..19..555G},
 	Archiveprefix = {arXiv},
 	Author = {{Gelman}, Andrew and {Simpson}, D. and {Betancourt}, M.},
+	Date-Modified = {2021-10-11 13:22:48 +0300},
 	Doi = {10.3390/e19100555},
 	Eprint = {1708.07487},
 	Journal = {Entropy},
 	Month = oct,
 	Pages = {555},
 	Primaryclass = {stat.ME},
-	Title = {{The Prior Can Often Only Be Understood in the Context of the Likelihood}},
+	Title = {The Prior Can Often Only Be Understood in the Context of the Likelihood},
 	Volume = 19,
 	Year = 2017,
 	Bdsk-Url-1 = {https://doi.org/10.3390/e19100555}}
