--- a/bibs/phon_sk.bib
+++ b/bibs/phon_sk.bib
@@ -1,12 +1,88 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2021-12-23 23:19:59 +0100 
+%% Created for Aviad Albert at 2022-04-16 18:04:16 +0200 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@manual{flemming2008asymmetriessk,
+	Author = {Flemming, Edward},
+	Citation_Identifier = {Flemming 2008},
+	Date-Added = {2022-04-16 17:57:50 +0200},
+	Date-Modified = {2022-04-16 18:03:31 +0200},
+	Organization = {Ms., Department of Linguistics \& Philosophy, MIT},
+	Publicationstatus = {Published},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Flemming%2C%20E/2008/Asymmetries%20between%20assimilati.pdf,Sente,},
+	Title = {Asymmetries between assimilation and epenthesis},
+	Uuid = {A91315F7-79CF-48FF-8F5D-D0DD7D215C0C},
+	Year = {2008}}
+
+@inproceedings{fullwood2014perceptualsk,
+	Author = {Fullwood, Michelle Alison},
+	Booktitle = {Proceedings of the 2013 {Annual Meetings on Phonology}},
+	Citation_Identifier = {Fullwood 2014a},
+	Date-Added = {2022-04-16 17:50:13 +0200},
+	Date-Modified = {2022-04-16 18:04:06 +0200},
+	Doi = {10.3765/amp.v1i1.14},
+	Google_Scholar_Bibtex_Export_Key = {M1kR-NvzHT0J},
+	Keywords = {Phonotactics;Prosody;Sonority;Perceptual Phon;NAP_paper;Optimality Theory},
+	Number = {1},
+	Publicationstatus = {Published},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Fullwood%2C%20MA/2014/The%20Perceptual%20Dimensions%20of%20S.pdf,Sente,},
+	Tags = {Sonority;Optimality Theory;Phonotactics;NAP\_paper;Prosody;Perceptual Phon},
+	Title = {The Perceptual Dimensions of Sonority-Driven Epenthesis},
+	Uuid = {CCBDF733-CC35-4965-B426-76C6ED8680E5},
+	Volume = {1},
+	Year = {2014},
+	Bdsk-Url-1 = {http://dx.doi.org/10.3765/amp.v1i1.14}}
+
+@inproceedings{flemming2008asymmetriessk2,
+	Author = {Flemming, Edward},
+	Booktitle = {82nd {Annual Meeting of the Linguistic Society of America, Chicago}},
+	Citation_Identifier = {Flemming 2008},
+	Date-Added = {2022-04-16 17:36:55 +0200},
+	Date-Modified = {2022-04-16 17:57:55 +0200},
+	Notes = {(28) :-0(9) (10) (10) (27) (28)},
+	Publicationstatus = {Published},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Flemming%2C%20E/2008/Asymmetries%20between%20assimilati.pdf,Sente,},
+	Title = {Asymmetries between assimilation and epenthesis},
+	Uuid = {A91315F7-79CF-48FF-8F5D-D0DD7D215C0C},
+	Year = {2008}}
+
+@mastersthesis{arrabothu2015usingsk,
+	Author = {Arrabothu, Apoorv Reddy},
+	Citation_Identifier = {Arrabothu 2015a},
+	Date-Added = {2022-04-16 11:58:53 +0200},
+	Date-Modified = {2022-04-16 12:01:41 +0200},
+	Description = {Master of Science},
+	Notes = {(36) (6) (20) (36)},
+	Organization = {International Institute of Information Technology Hyderabad, India},
+	Publicationstatus = {Published},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Arrabothu%2C%20AR/2015/Using%20Syllable%20Boundary%20Inform%20%232.pdf,Sente,},
+	Title = {Using Syllable Boundary Information for Query-by-Example Spoken Term Detection},
+	Uuid = {6543F0A6-064C-42EE-9D1B-E2F33132CAB4},
+	Year = {2015}}
+
+@article{tang2020dcdc2sk,
+	Author = {Tang, Kevin and DeMille, Mellissa MC and Frijters, Jan C. and Gruen, Jeffrey R.},
+	Citation_Identifier = {Tang 2020},
+	Date-Added = {2022-02-08 18:14:44 +0100},
+	Date-Modified = {2022-02-08 18:15:15 +0100},
+	Doi = {10.1098/rspb.2019.2712},
+	Journal = {Proceedings of the Royal Society B},
+	Number = {1928},
+	Pages = {20192712},
+	Publicationstatus = {Published},
+	Publisher = {The Royal Society},
+	Sentelink = {file:///Users/aviadalbert/Documents/Papers.sente6lib/Contents/Attachments/Tang%2C%20K/2020/DCDC2%20READ1%20regulatory%20element.pdf,Sente,},
+	Title = {{DCDC2 READ1} regulatory element: how temporal processing differences may shape language},
+	Uuid = {D9B0B9DC-1FFB-4ED9-BDC9-8FDED3A6CDF0},
+	Volume = {287},
+	Year = {2020},
+	Bdsk-Url-1 = {https://doi.org/10.1098/rspb.2019.2712}}
 
 @inbook{tupper2012sonoritysk,
 	Address = {Berlin; Boston},
