--- a/bibs/r-references.bib
+++ b/bibs/r-references.bib
@@ -1,7 +1,7 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Aviad Albert at 2020-09-18 16:47:16 +0200 
+%% Created for Aviad Albert at 2022-02-05 17:57:17 +0100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
@@ -18,8 +18,8 @@
 	Bdsk-Url-1 = {https://www.R-project.org/}}
 
 @article{R-brms_a,
-	Author = {B{\"u}rkner, {Paul-Christian}},
-	Date-Modified = {2020-09-18 16:47:02 +0200},
+	Author = {{Paul-Christian} B{\"u}rkner},
+	Date-Modified = {2022-02-05 17:57:03 +0100},
 	Doi = {10.18637/jss.v080.i01},
 	Encoding = {UTF-8},
 	Journal = {Journal of Statistical Software},
@@ -31,8 +31,8 @@
 	Bdsk-Url-1 = {https://doi.org/10.18637/jss.v080.i01}}
 
 @article{R-brms_b,
-	Author = {B{\"u}rkner, {Paul-Christian}},
-	Date-Modified = {2020-09-18 16:47:05 +0200},
+	Author = {{Paul-Christian} B{\"u}rkner},
+	Date-Modified = {2022-02-05 17:57:15 +0100},
 	Encoding = {UTF-8},
 	Journal = {The R Journal},
 	Number = {1},
@@ -68,14 +68,6 @@
 	Title = {Using stacking to average {Bayesian} predictive distributions},
 	Year = {2017},
 	Bdsk-Url-1 = {https://doi.org/10.1214/17-BA1091}}
-
-@manual{R-papaja,
-	Author = {Frederik Aust and Marius Barth},
-	Note = {R package version 0.1.0.9842},
-	Title = {{papaja}: {Create} {APA} manuscripts with {R Markdown}},
-	Url = {https://github.com/crsh/papaja},
-	Year = {2018},
-	Bdsk-Url-1 = {https://github.com/crsh/papaja}}
 
 @manual{R-purrr,
 	Author = {Lionel Henry and Hadley Wickham},
@@ -189,10 +181,3 @@
 	Url = {https://CRAN.R-project.org/package=Cairo},
 	Year = {2019},
 	Bdsk-Url-1 = {https://CRAN.R-project.org/package=Cairo}}
-@Manual{R-extrafont,
-  title = {extrafont: Tools for using fonts},
-  author = {Winston Chang,},
-  year = {2014},
-  note = {R package version 0.17},
-  url = {https://CRAN.R-project.org/package=extrafont},
-}
