a few more touches

--- a/CogSciNAP_reSubmit_again.Rmd
+++ b/CogSciNAP_reSubmit_again.Rmd
@@ -1244,7 +1244,7 @@ The top-down NAP model allows scores within a range that goes from -$\mathit{3}$
 
 There are various ways to calculate an estimation of the nucleus competition potential within syllables based on the periodic energy in the acoustic signal. The method we present here has the advantage of not relying on segmental landmarks that are categorical abstractions of the type that is assumed in the top-down model---such abstractions are considered to be unavailable in the bottom-up route.
 
-(ref:com-4examples-1) Smoothed periodic energy curve (black) of the four syllables from the experimental stimuli---*lpal*, *nmal*, *vlal*, and *smal*. The red vertical line denotes the center of periodic mass of the entire syllable (*CoM~syllable~*), the blue vertical line denotes the center of periodic mass of the left portion (*CoM~onset~*). Grey dotted vertical lines and annotated text denote segmental intervals by manual segmentation (for exposition purposes only). The distance between the two CoM landmarks is indicative of the energy displacement away from the syllabic center, reflecting the nucleus competition potential within the syllable (see text for details).
+(ref:com-4examples-1) Smoothed periodic energy measurement (black curve), taken from four recordings of the syllables *lpal*, *nmal*, *vlal*, and *smal* in the AA stimuli set. The red vertical line denotes the center of periodic mass of the entire syllable (*CoM~syllable~*), the blue vertical line denotes the center of periodic mass of the left portion (*CoM~onset~*). Grey dotted vertical lines and annotated text denote segmental intervals by manual segmentation (for exposition purposes only). The distance between the two CoM landmarks is indicative of the energy displacement away from the syllabic center, reflecting the nucleus competition potential within the syllable (see text for details).
 ```{r com-4examples-1, fig.cap = "(ref:com-4examples-1)", fig.width=7, fig.asp=.6, warning=FALSE, dev="cairo_pdf"}
 # CoM_ons <-  expression(CoM[ons])# %>% as_label()
 monosyl_examp_1 <- filter(monosyl_info_AA,
@@ -1452,7 +1452,7 @@ The entire word set eventually includes 29 single-vowel target types and 58 asso
 The full set of predictions for the 29 experimental targets is presented for all the symbol-based ordinal models (2$\times$SSP, 2$\times$MSD, and *NAP~td~*) in Table \@ref(tab:OrdinalTargetPreds), and for the signal-based continuous model (*NAP~bu~*) in Figures \@ref(fig:com-monosyl)--\@ref(fig:com-monosylHeb). Note that the scores of *NAP~bu~* are presented on a continuous ratio scale, with specific predictions for each token and consequential intervals between scores. The scores in *NAP~bu~* are not a generalization. Rather, they were extracted from the specific recordings, and they are expected to vary to some extent when measuring different tokens.
 We present the *NAP~bu~* scores for the two sets of stimuli used in the experiments: a set spoken by a native Hebrew speaker (Figure \@ref(fig:com-monosyl)) and a set spoken by a native German speaker (Figure \@ref(fig:com-monosylHeb)).
 
-(ref:com-monosyl) AA set (Hebrew speaker). Well-formedness scores in the continuous *NAP~bu~* model shown in terms of the distance between the center of mass of the entire syllable, *CoM~syllable~* (red vertical lines), and the center of mass of the left portion, *CoM~onset~* (blue vertical lines). Periodic energy is represented by the black curve. Grey dotted vertical lines and annotated text denote segmental intervals by manual segmentation (for exposition purposes only). Items are ordered by score (from worse- to better-formed), going from left-to-right and from top-to-bottom.
+(ref:com-monosyl) AA set (Hebrew speaker). Well-formedness scores in the continuous *NAP~bu~* model shown in terms of the distance between the center of mass of the entire syllable, *CoM~syllable~* (red vertical lines), and the center of mass of the left portion, *CoM~onset~* (blue vertical lines). Measured periodic energy of each recorded token is represented by the black curve. Grey dotted vertical lines and annotated text denote segmental intervals by manual segmentation (for exposition purposes only). Items are ordered by score (from worse- to better-formed), going from left-to-right and from top-to-bottom.
 ```{r com-monosyl, fig.cap = "(ref:com-monosyl)", fig.width=7, fig.asp=.8, warning=FALSE, dev="cairo_pdf"}
 # pdf.options(encoding = 'ISOLatin2')
 ordered_syl_abs <- unique(monosyl_info_AA[order(monosyl_info_AA$NAP_bu),]$syl)
@@ -1798,7 +1798,7 @@ The model fits of the different models are shown in Figures \@ref(fig:NullFit)--
 
 The null models are shown in Figure \@ref(fig:NullFit) as baselines in the respective experiments (the order of stimuli along the x-axis follows the *NAP~bu~* scores, but in a forced ordinal scale, with equidistant intervals). The slight differences in predictions for different clusters are due to individual differences in the accuracy. Recall that we subset the response times conditional on the monosyllabic response ($'1'$) to the forced-choice task. This means that when participants give more monosyllabic answers for a specific cluster, their adjusted intercept will have a greater influence on the predictions of the model for that cluster. In addition, clusters with fewer monosyllabic responses show more variability in their predictions (e.g., /lf/ vs. /fl/ in the AA set, on the left side of Figure \@ref(fig:NullFit)).
 
-(ref:NullFit) Null model fit. Observed mean log-transformed response times are depicted with red points, distribution of simulated means based on the null model are depicted with blue violins. 
+(ref:NullFit) Null model fit. Observed mean log-transformed response times of accurate responses are depicted with red points, distribution of simulated means based on the null model are depicted with blue violins. 
 <!-- Stimuli ordered from left to right according to their ascending well-formedness score in *NAP~bu~* (here in a forced-ordinal scale for exposition purposes). -->
 ```{r NullFit,fig.cap = "(ref:NullFit)", warning=FALSE, out.width=c("50%","50%"), fig.width=c(3.5,3.5), fig.asp=c(.5,.5), fig.show="hold", fig.align = "default", dev="cairo_pdf"}
 # ```{r NullFit,fig.cap = "(ref:NullFit)", warning=FALSE, fig.width=7, fig.asp=.28, fig.show="hold", dev="cairo_pdf"}
@@ -2252,7 +2252,7 @@ comparison%>%
 
 ```
 
-(ref:SonFitAll) Experiment 2: all sonority model fits (unspecified cluster types, see detailed versions above). Observed mean log-transformed response times are depicted with red points; distribution of simulated means based on the model are depicted with blue violins. Stimuli are ordered from left to right according to their score in a given model in ascending well-formedness. 
+(ref:SonFitAll) Experiment 2: all sonority model fits (unspecified cluster types, see detailed versions above). Observed mean log-transformed response times of accurate responses are depicted with red points; distribution of simulated means based on the model are depicted with blue violins. Stimuli are ordered from left to right according to their score in a given model in ascending well-formedness. 
 ```{r SonFitAll,fig.cap = "(ref:SonFitAll)", warning=FALSE, out.width=c("50%","50%","50%","50%","50%","50%"), fig.width=c(3.5,3.5,3.5,3.5,3.2,3.2), fig.asp=c(.4,.4,.4,.4,.4,.4), fig.show="hold", fig.align = "default"}
 
 predictions$SSP_obs %>%
